# turbulence-2D

./: .gitignore  CMakeLists.txt  nse-pseq  nse-pseq_bare
include/: DNS.h  DNS_a_priori.h  LES.h  Reynolds-equation.h  SGS_KE_LES.h  a-priori.h  dynamic-model-supplementary.h  dynamic-model.h  fourier-methods.h  generate_psi.h  grid-common2d.h  memory-reader.h  mg-data2d.h  model.h  mpi-com.h  mpi-com2d.h  mtrand.h  nse-bc2d.h  nse-out2d.h  nse2d.h  pois-base2d.h  pois-const2d.h  pois2d-fft.h  pois2d.h  san_LES.h  str-com.h  time-series.h  two_layer.h  unigrid2d.h  vecmath.h
scripts/: folder_iterator.sh  stastistics.qs
src/: CMakeLists.txt  DNS.cpp  DNS_a_priori.cpp  LES.cpp  Reynolds-equation.cpp  SGS_KE_LES.cpp  SGS_KE_backscatter.cpp  a-priori.cpp  dynamic-model.cpp  fourier-methods.cpp  generate_psi.cpp  main.cpp  memory-reader.cpp  mg-data2d.cpp  mpi-com2d.cpp  mtrand.cpp  nse-out2d.cpp  nse2d.cpp  pois-base2d.cpp  pois2d-fft.cpp  pois2d.cpp  san_DNS.cpp  san_LES.cpp  str-com.cpp  time-series.cpp  two_layer.cpp
test/: CMakeLists.txt  test1.cpp  test1.h  test2.cpp  test2.h  test3.cpp  test3.h  test_proc.cpp
